# ecommerce-backend

./: .env
api/src/: customer_handler.rs  lib.rs  order_handler.rs  product_handler.rs
application/src/: lib.rs
application/src/customers/: create.rs  login.rs  mod.rs
application/src/orders/: create.rs  delete.rs  read.rs
application/src/products/: create.rs  delete.rs  read.rs  update.rs
domain/src/: models.rs  schema.rs
infrastructure/migrations/2023-09-09-040218_create_customers/: down.sql  up.sql
infrastructure/migrations/2023-09-09-040258_create_products/: up.sql
infrastructure/migrations/2023-09-10-034732_create_orders/: down.sql  up.sql
infrastructure/migrations/2023-09-10-035050_create_order_details/: down.sql  up.sql
infrastructure/src/: schema.rs
shared/: Cargo.toml
shared/src/: jwt.rs  lib.rs  response_models.rs
