[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
rocket = { version = "0.5.0-rc.2"}
serde = { version = "1.0.147", features = ["derive"] }
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
serde_json = "1.0.62"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json"]